# houdini-files

./: .gitignore  LICENSE  README.md  requirements.txt
advent-calendar/2019/: README.md
advent-calendar/2019/hip_file/: accessToAttributeValue_01.hipnc
advent-calendar/2019_adv_cal/: command_def.py  python_VEX_memo.hipnc  tello_houdini.hipnc  test_hou.py
advent-calendar/2020/: README.md
advent-calendar/2020_adv_cal/: .gitignore  city_wind_generator.hiplc
advent-calendar/2021/: README.md
advent-calendar/2021/HDAs/: hda_attrib_cache.hdalc
advent-calendar/2021/python_in_HDAs/: README.md
advent-calendar/2021/python_in_HDAs/hda_attrib_cache/: point_attribute_to_cache.py
advent-calendar/2021_adv_cal/: README.md  pyproject.toml
advent-calendar/2021_adv_cal/HDAs/: hda_data_importer.hdalc
advent-calendar/2021_adv_cal/python_in_HDAs/data_importer/: get_data_from_datasource.py
advent-calendar/2021_adv_cal/python_in_HDAs/hda_attrib_cache/: prim_attribute_to_cache.py
advent-calendar/2022/: README.md  python-sop-no-typehint.py  python-sop.py
advent-calendar/2022/hda_file/: AttributeSearcher.hdalc  attribute_searcher.1.1.hdalc
advent-calendar/2023/: .gitignore  README.md  pyproject.toml
advent-calendar/2023/src/: concat_txt.py  extract_json.py
shelf-tools/openai-chat/: README.md
shelf-tools/openai-chat-assistant/: README.md  instructions.txt
