[tool.poetry]
name = "2021_adv_cal"
version = "0.1.0"
description = ""
authors = ["Shintaro Tonosaki <attentionpleaseeveryone@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
pandas = "^1.3.4"
numpy = "^1.21.4"
openpyxl = "^3.0.9"
psycopg2 = "^2.9.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
