[project]
name = "2023"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shin-t-o", email = "attentionpleaseeveryone@gmail.com" }
]
dependencies = [
    "pandas>=2.1.3",
    "ipykernel>=6.27.1",
    "matplotlib>=3.8.2",
    "jupyter>=1.0.0",
    "numpy>=1.26.2",
    "openai>=1.3.6",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
